--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,11 +1,12 @@
 {
-	"compilerOptions": {
-		"module": "ES2020",
-		"target": "ES2020",
-		"checkJs": true,
-		"types": ["chrome-types"]
-	},
-	"typeAcquisition": {
-		"include": ["chrome"]
-	}
+    "compilerOptions": {
+        "module": "ES2020",
+        "target": "ES2020",
+        "checkJs": true,
+        "allowJs": true,
+    },
+    "typeAcquisition": {
+        "enable": true,
+        "include": ["chrome", "alpinejs"]
+    }
 }
